--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cryptr": "^3.0.0",
     "googleapis": "^27.0.0",
     "node-rest-client": "^3.1.0",
+    "node-schedule": "^1.3.0",
     "nodemailer": "^3.0.2",
     "simple-encryptor": "^1.2.0",
     "smtp-server": "^2.0.1"
